tests/od2trips/errors/format/vm/vm_time_begin_larger/errors.od2trips
Error: Matrix begin time 7200.00 is larger than end time 3600.00.
Quitting (on error).
